<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ad_unit_id">ca-app-pub-9383925365299685/4402723455</string>
    <string name="app_name">kudosu</string>
    <string name="action_settings">Settings</string>
    <string name="clear_grid">Clear grid</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_image">Image</string>
    <string name="play">Play</string>
    <string name="solve">Solve</string>
    <string name="title_activity_play">Play !</string>
    <string name="title_activity_solve">Solver !</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="delete">del</string>
    <string name="back">back</string>
    <string name="fill">Fill</string>
    <string name="validate">Valider</string>
    <string name="pause">Pause</string>
    <string name="title_activity_level_selection">Select the difficulty level</string>
    <string name="level_selection">Select the difficulty level</string>
    <string name="level1">Easy</string>
    <string name="level2">Medium</string>
    <string name="level3">Hard</string>
    <string name="level4">Very Hard</string>
    <string name="level5">Not Enought ?</string>
    <string name="image_description">description</string>
    <string name="text_button_picture">Shoot</string>
    <string name="title_activity_solve_manual">SolveManualActivity</string>

    <string-array name="difficulty_levels_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very Hard</item>
        <item>Expert</item>
    </string-array>

    <string name="title_activity_game">GameActivity</string>

</resources>
