<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:background="#111111"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dip" >

    <view class="com.flightcom.kudosu.MChronometer"
        android:id="@+id/chrono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp" />
    
    <LinearLayout android:id="@+id/gridlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </LinearLayout>
    
    <LinearLayout android:id="@+id/buttonlayout"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:paddingTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

	    <LinearLayout android:id="@+id/buttonlayout1"
	        android:weightSum="4"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <Button android:id="@+id/button1"
				style="@style/btnlook"
	            android:text="@string/one" />
	        
	        <Button android:id="@+id/button2"
				style="@style/btnlook"
	            android:text="@string/two" />
	        
	        <Button android:id="@+id/button3"
				style="@style/btnlook"
	            android:text="@string/three" />
	        
	        <Button android:id="@+id/buttonBack"
				style="@style/btnlook"
	            android:text="@string/fill" />
	        
	    </LinearLayout>
	        
	    <LinearLayout android:id="@+id/buttonlayout2"
	        android:weightSum="4"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <Button android:id="@+id/button4"
				style="@style/btnlook"
	            android:text="@string/four" />
	        
	        <Button android:id="@+id/button5"
				style="@style/btnlook"
	            android:text="@string/five" />
	        
	        <Button android:id="@+id/button6"
				style="@style/btnlook"
	            android:text="@string/six" />
	        
	        <Button android:id="@+id/buttonDel"
				style="@style/btnlook"
	            android:text="@string/delete" />
	        
	    </LinearLayout>
	        
	    <LinearLayout android:id="@+id/buttonlayout3"
	        android:weightSum="4"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <Button android:id="@+id/button7"
				style="@style/btnlook"
	            android:text="@string/seven" />
	        
	        <Button android:id="@+id/button8"
				style="@style/btnlook"
	            android:text="@string/eight" />
	        
	        <Button android:id="@+id/button9"
				style="@style/btnlook"
	            android:text="@string/nine" />
	        
	        <Button android:id="@+id/buttonValider"
				style="@style/btnlook"
	            android:text="@string/solve" />

		</LinearLayout>
	        	
	</LinearLayout>

</LinearLayout>