<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="0dp" >

    <Chronometer android:id="@+id/chrono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp" />
    
    <LinearLayout android:id="@+id/gridlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </LinearLayout>
    
    <LinearLayout android:id="@+id/buttonlayout"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

	    <LinearLayout android:id="@+id/buttonlayout1"
	        android:weightSum="4"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <Button android:id="@+id/button1"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/one" />
	        
	        <Button android:id="@+id/button2"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/two" />
	        
	        <Button android:id="@+id/button3"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/three" />
	        
	        <Button android:id="@+id/buttonBack"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/back" />
	        
	    </LinearLayout>
	        
	    <LinearLayout android:id="@+id/buttonlayout2"
	        android:weightSum="4"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <Button android:id="@+id/button4"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/four" />
	        
	        <Button android:id="@+id/button5"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/five" />
	        
	        <Button android:id="@+id/button6"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/six" />
	        
	        <Button android:id="@+id/buttonDel"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/delete" />
	        
	    </LinearLayout>
	        
	    <LinearLayout android:id="@+id/buttonlayout3"
	        android:weightSum="4"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <Button android:id="@+id/button7"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/seven" />
	        
	        <Button android:id="@+id/button8"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/eight" />
	        
	        <Button android:id="@+id/button9"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/nine" />
	
	        <Button android:id="@+id/buttonValider"
				android:textColor="@color/white"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/validate" />
	        
		</LinearLayout>
	
	</LinearLayout>

</LinearLayout>