<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LevelSelectionActivity" >

    <Button
        android:id="@+id/buttonLevel1"
        android:layout_weight="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level1" />

    <Button
        android:id="@+id/buttonLevel2"
        android:layout_weight="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level2" />

    <Button
        android:id="@+id/buttonLevel3"
        android:layout_weight="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level3" />
    
    <Button
        android:id="@+id/buttonLevel4"
        android:layout_weight="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level4" />
    
    <Button
        android:id="@+id/buttonLevel5"
        android:layout_weight="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level5" />

</LinearLayout>
